--- a/main.html
+++ b/main.html
@@ -1,16 +1,65 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>My Playlist</title>
+  <style>
+    body {
+      background-color: rgb(204, 204, 204);
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+
+    h1 {
+      text-align: center;
+    }
+
+    h2 {
+      text-align: center;
+    }
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+    }
+
+    li {
+      margin-bottom: 10px;
+    }
+
+    a {
+      text-decoration: none;
+      target: blank;
+    }
+
+    .player_one, .player_two {
+      background-color: rgb(255, 255, 255);
+      padding: 10px;
+      border-radius: 5px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1>My Playlist</h1>
+  <h2>Now Playing...</h2>
+  <h2>MP3 songs</h2>
+  <ul>
+    <li><a href="https://www.pagalworld.com.se/files/download/id/64630">Song 1</a></li>
+    <li><a href="#">Song 2</a></li>
+    <li><a href="#">Song 3</a></li>
+    <li><a href="#">Song 4</a></li>
+    <li><a href="#">Song 5</a></li>
+  </ul>
 
+  <div class="player_one">
+    <video controls>
+      <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+    </video>
+  </div>
+
+  <div class="player_two">
+    <audio controls>
+      <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
+    </audio>
+  </div>
 </body>
-
 </html>
